--- a/style.css
+++ b/style.css
@@ -126,7 +126,7 @@ body {
     background-image: url('playstore.png');
 }
 
-*/*/
+/*
 @media (max-width:1024px){
     .instagram-wrapper {
         width: 90%; 
@@ -153,4 +153,4 @@ body {
 
     .group {
         border: 1px solid transparent;
-    }
+    }*/
